logs/turtlesim/build.make.026.log.stderr
In file included from /home/alfredo/turtlesim/build/turtlesim/include/turtlesim/../../../../src/ros_tutorials/turtlesim/include/turtlesim/turtle_frame.h:46:0,
                 from /home/alfredo/turtlesim/build/turtlesim/include/turtlesim/moc_turtle_frame.cpp:9:
/home/alfredo/turtlesim/build/turtlesim/include/turtlesim/../../../../src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:66:8: error: extra qualification ‘turtlesim::Turtle::’ on member ‘waypointCallback’ [-fpermissive]
   void Turtle::waypointCallback(const geometry_msgs::Point::ConstPtr& point)
        ^~~~~~
/home/alfredo/turtlesim/build/turtlesim/include/turtlesim/../../../../src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:66:76: error: expected ‘;’ at end of member declaration
   void Turtle::waypointCallback(const geometry_msgs::Point::ConstPtr& point)
                                                                            ^
make[2]: *** [CMakeFiles/turtlesim_node.dir/include/turtlesim/moc_turtle_frame.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle_frame.h:46:0,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtlesim.cpp:34:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:66:8: error: extra qualification ‘turtlesim::Turtle::’ on member ‘waypointCallback’ [-fpermissive]
   void Turtle::waypointCallback(const geometry_msgs::Point::ConstPtr& point)
        ^~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:66:76: error: expected ‘;’ at end of member declaration
   void Turtle::waypointCallback(const geometry_msgs::Point::ConstPtr& point)
                                                                            ^
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtlesim.cpp.o] Error 1
In file included from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:30:0:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:66:8: error: extra qualification ‘turtlesim::Turtle::’ on member ‘waypointCallback’ [-fpermissive]
   void Turtle::waypointCallback(const geometry_msgs::Point::ConstPtr& point)
        ^~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:66:76: error: expected ‘;’ at end of member declaration
   void Turtle::waypointCallback(const geometry_msgs::Point::ConstPtr& point)
                                                                            ^
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In constructor ‘turtlesim::Turtle::Turtle(const ros::NodeHandle&, const QImage&, const QPointF&, float)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:61:3: error: ‘waypoint_sub’ was not declared in this scope
   waypoint_sub=nh_.subscribe("waypoint", 1, &Turtle::waypointCallback, this);
   ^~~~~~~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:61:3: note: suggested alternative: ‘pose_sub’
   waypoint_sub=nh_.subscribe("waypoint", 1, &Turtle::waypointCallback, this);
   ^~~~~~~~~~~~
   pose_sub
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In member function ‘void turtlesim::Turtle::waypointCallback(const ConstPtr&)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:69:1: error: ‘wayx’ was not declared in this scope
 wayx=point->x;
 ^~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:70:1: error: ‘wayy’ was not declared in this scope
 wayy=point->y;
 ^~~~
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
In file included from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle_frame.h:46:0,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle_frame.cpp:30:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:66:8: error: extra qualification ‘turtlesim::Turtle::’ on member ‘waypointCallback’ [-fpermissive]
   void Turtle::waypointCallback(const geometry_msgs::Point::ConstPtr& point)
        ^~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:66:76: error: expected ‘;’ at end of member declaration
   void Turtle::waypointCallback(const geometry_msgs::Point::ConstPtr& point)
                                                                            ^
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle_frame.cpp: In member function ‘virtual void turtlesim::TurtleFrame::paintEvent(QPaintEvent*)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle_frame.cpp:228:34: error: ‘wayx’ was not declared in this scope
   const QRect rectangle3 = QRect(wayx, wayy, 300, 300);
                                  ^~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle_frame.cpp:228:40: error: ‘wayy’ was not declared in this scope
   const QRect rectangle3 = QRect(wayx, wayy, 300, 300);
                                        ^~~~
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle_frame.cpp.o] Error 1
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
